# LCT_2025

./: DOCUMENTATION.md  LINKS.md
android_apk/code/: settings.gradle.kts
android_apk/code/app/: build.gradle.kts
backend/: clean_and_run.sh  docker-compose.yml
backend/lct_backend1/: .dockerignore  DOCKER_SETUP.md  Dockerfile  Makefile  README.md  S3_SETUP.md  TROUBLESHOOTING.md  docker-compose.yml  env.docker.example  env_example.txt  requirements.txt  run.py  start.bat  stop.bat  test_api.py
backend/lct_backend1/app/: __init__.py  main.py
backend/lct_backend1/scripts/: wait-for-it.sh
backend/lct_backend2/: Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/lct_backend2/app/: main.py
backend/lct_backend3/: Dockerfile  README.md  docker-compose.yml  requirements.txt  run.py
backend/lct_backend3/app/: main.py  promt.txt
backend/lct_backend3/app/agent/: Dockerfile  README.md  agent_graph.py  docker-compose.yml  documents.pkl  main.py  pyproject.toml  rag_service.py  requirements.txt  tree_diseases.csv
frontend/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  start.sh  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analyses/: page.tsx
frontend/app/map/: page.tsx
frontend/components/: ImageCard.tsx  ImageUpload.tsx  LoadingAnimation.tsx  MapView.tsx  OptimizedFragment.tsx  OptimizedImage.tsx  Toast.tsx
frontend/lib/: api.ts
windows_app/: .gitignore  LINK_ON_WINDOWS_APP.txt  app.js  index.html  main.py  pyproject.toml  requirements.txt  styles.css
(+89 files in other folders)
